--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "byte-md",
   "version": "2.0.0",
@@ -24,7 +23,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.1",
     "@types/node": "^18.0.6",
-                "@whiskeysockets/baileys": "github:HyHamza/Baileys",
+    "@whiskeysockets/baileys": "github:HyHamza/Baileys",
     "@xaviabot/fb-downloader": "^1.0.14",
     "aptoide-scraper": "^1.0.1",
     "axios": "^1.4.0",
@@ -41,13 +40,13 @@
     "fs-extra": "^11.1.1",
     "g-i-s": "^2.1.7",
     "gist": "^0.2.0",
-     "genius-lyrics": "^4.4.3", 
+    "genius-lyrics": "^4.4.3",
     "google-it": "^1.6.4",
     "google-tts-api": "latest",
     "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
     "javascript-obfuscator": "^4.1.0",
-                     "jimp": "^0.16.13", 
+    "jimp": "^0.16.13",
     "latest": "^0.2.0",
     "link-preview-js": "^3.0.4",
     "moment-timezone": "^0.5.43",
@@ -68,6 +67,6 @@
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.10.0"
+    "nayan-media-downloader": "^1.0.0"  // Add the new dependency
   }
 }
