--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.1",
     "@types/node": "^18.0.6",
-    "@whiskeysockets/baileys": "github:HyHamza/Baileys",
+    "@whiskeysockets/baileys": "github:Luffy2ndAccount/Baileys",
     "@xaviabot/fb-downloader": "^1.0.14",
     "aptoide-scraper": "^1.0.1",
     "axios": "^1.4.0",
@@ -34,19 +34,17 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
-    "file-type": "16.5.3",
+    "file-type": "16.5.4",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "fs-extra": "^11.1.1",
     "g-i-s": "^2.1.7",
-    "gist": "^0.2.0",
-    "genius-lyrics": "^4.4.3",
     "google-it": "^1.6.4",
     "google-tts-api": "latest",
     "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "javascript-obfuscator": "^4.1.0",
-    "jimp": "^0.16.13",
+    "javascript-obfuscator": "^4.0.0",
+    "jimp": "^0.22.12",
     "latest": "^0.2.0",
     "link-preview-js": "^3.0.4",
     "moment-timezone": "^0.5.43",
@@ -56,6 +54,7 @@
     "node-id3": "^0.2.6",
     "pg": "^8.11.2",
     "pino": "^8.15.0",
+    "performance-now": "^2.1.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "sequelize": "^6.32.1",
@@ -67,7 +66,7 @@
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
+    "ytdl-core": "^4.10.0",
     "nayan-media-downloader": "^2.4.3",
-    "ytdl-core": "^4.11.5"
   }
 }
