--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.10.0",
-    "nayan-media-downloader": "^2.4.3",
+    "nayan-media-downloader": "^2.4.3"
   }
 }
