--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "author": "Hamza",
   "license": "ISC",
-  "dependencies": {
+    "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.1",
     "@types/node": "^18.0.6",
@@ -66,7 +66,6 @@
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.10.0",
-    "nayan-media-downloader": "^2.4.3"
+    "ytdl-core": "github:FaouzKK/node-ytdl-core"
   }
 }
