--- a/app.json
+++ b/app.json
@@ -7,74 +7,118 @@
   "succes_url":"/",
   "stack":"container",
   "env":{
-    "PREFIX": {
-      "description":"Choose your prefix of bot",
+    "PREFIX":
+    {
+      "description":"choose your prefix of bot",
       "value":".",
       "required":true
     },
-    "AUTO_READ_STATUS": {
-      "description":"Your contact status will be read automatically(type yes to active or no to deactive; don't write in capital letter)",
-      "value":"yes",
-      "required":false
-    },
-    "AUTO_DOWNLOAD_STATUS": {
-      "description":"Your contact status will be download automatically and send to you(type yes to active or no to deactive; don't write in capital letter)",
+    "AUTO_READ_STATUS":
+    {
+      "description":"Your contact status will be read automatically(type yes to active or no to deactive  ; don't write in capital letter)",
       "value":"no",
       "required":false
-    },
-    "BOT_NAME": {
-      "description":"Put A name for your bot or leave default name.",
-      "value":"BYTE-MD",
+    }, "AUTO_DOWNLOAD_STATUS":
+    {
+      "description":"Your contact status will be download automatically and send to you(type yes to active or no to deactive ; don't write in capital letter)",
+      "value":"no",
       "required":false
-    },
-    "PUBLIC_MODE": {
-      "description":"type yes to put your bot on public mode or no to put it on private mode. In private mode, Only you'll be able to use the bot but in public mode anyone can use Byte-md",
+    }
+    ,
+     "PM_PERMIT" :
+     {
+      "description":"Other user can't use your bot in pm (type yes to active or no to deactive ; don't write in capital letter)",
+      "value":"no",
+      "required":false
+    }
+    ,
+    "BOT_NAME" : {
+       
+      "description":"put A name for your bot",
+      "value":"BYTE-V.lite",
+      "required":false
+
+    } ,
+     "BOT_MENU_LINKS" : {
+    
+      "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
+      "value":"https://raw.githubusercontent.com/HyHamza/HyHamza/main/Images/BYTE-MD-LITE.jpeg",
+      "required":false
+       
+     },
+    "PUBLIC_MODE":
+    {
+      "description":"type yes to put your bot on public mode or no to put it on private mod",
       "value":"yes",
       "required":false
+    }
+	,
+    "HEROKU_APY_KEY": {
+    "description": "insert your heroku api-key ",
+     "value":"",
+	"required" :false
     },
-    "HEROKU_API_KEY": {
-      "description":"insert your heroku api-key (this is optionnal) But if you want to change the variables from Whatsapp then put the api key (https://dashboard.heroku.com/account) scroll down and you'll see a API key",
-      "required":false
-    },
-    "HEROKU_APP_NAME": {
-      "description":"insert your heroku APP NAME (this is optionnal) But if you want to change the variables from Whatsapp then put the app name",
-      "required":false
-    },
-    "SESSION_ID": {
-      "description":"Put your session ID, make sure it starts with Byte;;;",
+  "HEROKU_APP_NAME": {
+    "description": "insert your heroku APP NAME (the name you wrote at the beginning)",
+     "value":"",
+	"required" :false
+    }  
+	  ,
+    "SESSION_ID":
+    {
+      "description":"put your session ID, the code you received after pairing code make sure starts with Byt;;;",   
       "value":"",
       "required":true
+      
     },
-    "OWNER_NAME": {
-      "description":"Put owner name of the BOT or ignore Because this is Optional",
-      "required":false,
-      "value":"TalkDrove"
-    },
-    "OWNER_NUMBER": {
-      "description":"Put owner number of the BOT, OWNER Can control the BOT even in Private Mode",
-      "required":false,
-      "value":"923072380380"
-    },
-    "WARN_COUNT": {
-      "description":"this is the limit of warn for warning command, it means that if anyone cross its limit they'll be kicked out or bot will be perform action according to the specified conditions",
-      "required":false,
-      "value":"3"
-    },
-    "STARTING_BOT_MESSAGE": {
-      "description":"if you don't want starting-bot-message put no else put yes",
-      "required":true,
-      "value":"yes"
-    }
+    "OWNER_NAME":
+    {
+    
+    "desc": "Your Name",
+    "required": false,
+    "value": "TalkDrove"
   },
+    "NUMERO_OWNER":
+  {
+    
+    "desc": "Your number, dont' put '+' and put you area code(exemple. '92')",
+    "required":false,
+    "value": "923072380380"
+  },
+    "WARN_COUNT":
+  {
+    "desc": "this is the limit of warn for warning commandes",
+    "required": false,
+    "value": "3"
+  },
+  "STARTING_BOT_MESSAGE":
+  {
+    "description": "if you don't want startting-bot-message put no else put yes",
+    "required": true,
+    "value": "yes"
+  },
+  "PRESENCE":{
+    "description":"Mark your presence: 1 to indicate that you are online even if you are not. 2 to indicate that you are currently typing a message. 3 to indicate that you are currently recording an audio. Or leave the field blank to indicate your real state.",
+    "value":"1",  
+    "required": false
+  },
+  "ANTI_DELETE_MESSAGE" : {
+    "description": "if you want to enable anti delete message put yes else put no",
+    "value": "yes",
+    "required": false
+  }
+  },
+
   "formation": {
-    "worker": {
-      "quantity": 1,
-      "size": "basic"
-    }
-  },
-  "addons": [
+		"worker": {
+			"quantity": 1,
+			"size": "basic"
+		}
+	},
+
+  "addons":[
     {
       "plan":"heroku-postgresql"
     }
   ]
-}
+     }
