--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "wa-sticker-formatter": "^4.4.4",
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "github:FaouzKK/node-ytdl-core"
+    "yt-search": "^2.10.4",    
+    "ytdl-core": "github:HyHamza/TalkDrove-yt-dl-core"
+
   }
 }
