--- a/app.json
+++ b/app.json
@@ -78,16 +78,21 @@
     "required": false,
     "value": "TalkDrove"
   },
-    "NUMERO_OWNER":
+  "CHAT_BOT":
+    {
+      "desc": "Put on to allow the bot to chat with people who text you or put off if you don't want the bot to chat with people",
+      "required": false, 
+       "value": "off" 
+    "OWNER NUMBER":
   {
     
     "desc": "Your number, dont' put '+' and put you area code(exemple. '92')",
-    "required":false,
-    "value": "923072380380"
+    "required":true,
+    "value": "923458017380"
   },
     "WARN_COUNT":
   {
-    "desc": "this is the limit of warn for warning commandes",
+    "desc": "this is the limit of warn for warning commands",
     "required": false,
     "value": "3"
   },
@@ -97,6 +102,12 @@
     "required": true,
     "value": "yes"
   },
+      "AUTO_REACTION":
+    {
+      "description":"Put on if you want the bot to react to people's messages.It won't react to your messages and those from creator France King.", 
+      "value":"off", 
+      "required":false 
+    }, 
   "PRESENCE":{
     "description":"Mark your presence: 1 to indicate that you are online even if you are not. 2 to indicate that you are currently typing a message. 3 to indicate that you are currently recording an audio. Or leave the field blank to indicate your real state.",
     "value":"1",  
