--- a/app.json
+++ b/app.json
@@ -95,7 +95,7 @@
     "ANTI_DELETE_MESSAGE": {
       "description": "if you want to enable anti delete message put yes else put no",
       "value": "yes",
-      "required": false
+      "required": true
     }
   },
   "formation": {
