--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "author": "Hamza",
   "license": "ISC",
-    "dependencies": {
+  "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^10.0.1",
     "@types/node": "^18.0.6",
@@ -34,27 +34,29 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
-    "file-type": "16.5.4",
+    "file-type": "16.5.3",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "fs-extra": "^11.1.1",
     "g-i-s": "^2.1.7",
+    "gist": "^0.2.0",
+     "genius-lyrics": "^4.4.3", 
     "google-it": "^1.6.4",
     "google-tts-api": "latest",
     "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "javascript-obfuscator": "^4.0.0",
-    "jimp": "^0.22.12",
+    "javascript-obfuscator": "^4.1.0",
+    "jimp": "^0.16.13", 
     "latest": "^0.2.0",
     "link-preview-js": "^3.0.4",
     "moment-timezone": "^0.5.43",
     "mumaker": "^2.0.0",
+    "nayan-media-downloader": "^2.4.5",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.2.6",
     "node-id3": "^0.2.6",
     "pg": "^8.11.2",
     "pino": "^8.15.0",
-    "performance-now": "^2.1.0",
     "qrcode-terminal": "^0.12.0",
     "readline": "^1.3.0",
     "sequelize": "^6.32.1",
@@ -65,8 +67,8 @@
     "wa-sticker-formatter": "^4.4.4",
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
-    "yt-search": "^2.10.4",    
-    "ytdl-core": "github:HyHamza/TalkDrove-yt-dl-core"
-
+    "yt-search": "^2.10.4",
+    "france": "France-King", 
+    "ytdl-core": "github:franceking1/flash-dls"
   }
 }
