--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "youtube-yts": "^2.0.0",
     "youtubedl-core": "^4.11.7",
     "yt-search": "^2.10.4",
-    "ytdl-core": "github:HyHamza/TalkDrove-yt-dl-core"
+    "talkdrove-ytdl": "^1.0.2"
   }
 }
